<resources>
    <string name="app_name">3.1.1</string>
    <string name="textViewInputNumbers"></string>
    <string name="textViewButton1">1</string>
    <string name="textViewButton2">2</string>
    <string name="textViewButton3">3</string>
    <string name="textViewButton4">4</string>
    <string name="textViewButton5">5</string>
    <string name="textViewButton6">6</string>
    <string name="textViewButton7">7</string>
    <string name="textViewButton8">8</string>
    <string name="textViewButton9">9</string>
    <string name="textViewButton0">0</string>
    <string name="textViewButtonDot">.</string>
    <string name="textViewButtonC">C</string>
    <string name="textViewButtonPlusMinus">+/-</string>
    <string name="textViewButtonPercent">%</string>

    <string name="textViewButtonDivision">/</string>
    <string name="textViewButtonMulti">X</string>
    <string name="textViewButtonMinus">-</string>
    <string name="textViewButtonPlus">+</string>
    <string name="textViewButtonEqual">=</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="v">V</string>
    <string name="y">Y</string>
    <string name="a">A</string>
    <string name="n">N</string>
    <string name="k">K</string>
    <string name="o">O</string>
</resources>
