<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewInputNumbers"
        style="@style/FontTheme30InputNumbers"
        android:layout_height="wrap_content"
        android:text="@string/textViewInputNumbers" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/letters1constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInputNumbers"
        android:background="@color/colorGray">
        >

        <TextView
            android:id="@+id/D"
            style="@style/FontThemeLetters"
            android:text="@string/d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/E"
            style="@style/FontThemeLetters"
            android:text="@string/e"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/R"
            app:layout_constraintStart_toEndOf="@+id/D"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/R"
            style="@style/FontThemeLetters"
            android:text="@string/r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Ee"
            app:layout_constraintStart_toEndOf="@+id/E"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Ee"
            style="@style/FontThemeLetters"
            android:text="@string/e"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/V"
            app:layout_constraintStart_toEndOf="@+id/R"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/V"
            style="@style/FontThemeLetters"
            android:text="@string/v"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/A"
            app:layout_constraintStart_toEndOf="@+id/Ee"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/A"
            style="@style/FontThemeLetters"
            android:text="@string/a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/N"
            app:layout_constraintStart_toEndOf="@+id/V"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/N"
            style="@style/FontThemeLetters"
            android:text="@string/n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/K"
            app:layout_constraintStart_toEndOf="@+id/A"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/K"
            style="@style/FontThemeLetters"
            android:text="@string/k"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/O"
            app:layout_constraintStart_toEndOf="@+id/N"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/O"
            style="@style/FontThemeLetters"
            android:text="@string/o"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/K"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/r0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/letters1constraintlayout"
        android:background="@color/colorBlack"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/column0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/textViewButtonC"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButtonC" />

                <Button
                    android:id="@+id/textViewButtonPlusMinus"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButtonPlusMinus" />

                <Button
                    android:id="@+id/textViewButtonPercent"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButtonPercent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/textViewButton7"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton7" />

                <Button
                    android:id="@+id/textViewButton8"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton8" />

                <Button
                    android:id="@+id/textViewButton9"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/textViewButton4"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton4" />

                <Button
                    android:id="@+id/textViewButton5"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton5" />

                <Button
                    android:id="@+id/textViewButton6"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/textViewButton1"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton1" />

                <Button
                    android:id="@+id/textViewButton2"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton2" />

                <Button
                    android:id="@+id/textViewButton3"
                    style="@style/FontTheme30"
                    android:text="@string/textViewButton3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/textViewButton0"
                    style="@style/FontTheme30"
                    android:layout_weight="1"
                    android:text="@string/textViewButton0" />

                <Button
                    android:id="@+id/textViewButtonDot"
                    style="@style/FontTheme30"
                    android:layout_weight="2"
                    android:text="@string/textViewButtonDot" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/letters1constraintlayoutVertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorGray"
            android:orientation="vertical">
            >

            <TextView
                android:id="@+id/D1"
                style="@style/FontThemeLetters"
                android:text="@string/d"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/E1"
                style="@style/FontThemeLetters"
                android:text="@string/e"
                app:layout_constraintBottom_toTopOf="@+id/R1"
                app:layout_constraintTop_toBottomOf="@+id/D1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/R1"
                style="@style/FontThemeLetters"
                android:text="@string/r"
                app:layout_constraintBottom_toTopOf="@+id/Ee1"
                app:layout_constraintTop_toBottomOf="@+id/E1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/Ee1"
                style="@style/FontThemeLetters"
                android:text="@string/e"
                app:layout_constraintBottom_toTopOf="@+id/V1"
                app:layout_constraintTop_toBottomOf="@+id/R1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/V1"
                style="@style/FontThemeLetters"
                android:text="@string/v"
                app:layout_constraintBottom_toTopOf="@+id/A1"
                app:layout_constraintTop_toBottomOf="@+id/Ee1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/A1"
                style="@style/FontThemeLetters"
                android:text="@string/a"
                app:layout_constraintBottom_toTopOf="@+id/N1"
                app:layout_constraintTop_toBottomOf="@+id/V1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/N1"
                style="@style/FontThemeLetters"
                android:text="@string/n"
                app:layout_constraintBottom_toTopOf="@+id/K1"
                app:layout_constraintTop_toBottomOf="@+id/A1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/K1"
                style="@style/FontThemeLetters"
                android:text="@string/k"
                app:layout_constraintBottom_toTopOf="@+id/O1"
                app:layout_constraintTop_toBottomOf="@+id/N1"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/O1"
                style="@style/FontThemeLetters"
                android:text="@string/o"
                app:layout_constraintTop_toBottomOf="@+id/K1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/column1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/textViewButtonDivision"
                style="@style/FontTheme30_Orange"
                android:layout_weight="1"
                android:text="@string/textViewButtonDivision" />

            <Button
                android:id="@+id/textViewButtonMulti"
                style="@style/FontTheme30_Orange"
                android:layout_weight="1"
                android:text="@string/textViewButtonMulti" />

            <Button
                android:id="@+id/textViewButtonMinus"
                style="@style/FontTheme30_Orange"
                android:text="@string/textViewButtonMinus" />

            <Button
                android:id="@+id/textViewButtonPlus"
                style="@style/FontTheme30_Orange"
                android:layout_weight="1"
                android:text="@string/textViewButtonPlus" />

            <Button
                android:id="@+id/textViewButtonEqual"
                style="@style/FontTheme30_Orange"
                android:layout_weight="1"
                android:text="@string/textViewButtonEqual" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>